# WhisperTest

./: README.md  app.py  pyproject.toml
src/scribe/: __main__.py  scribe.py
